<resources>
    <string name="app_name">RDS Directory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Razvitie">Идея создания РДС появилась у Тимофея Кошарного и Дмитрия Семенюка в 2010 году. Проходившие тогда соревнования по дрифту под брендом Формула Дрифт на западе и на востоке страны не устраивали обоих, что и послужило толчком к созданию общей серии с общими регламентом и правилами судейства. Тимофей и Дмитрий были ориентированы на японскую школу дрифта, поэтому весной 2010 года Тимофей совместно с бывшим судьей Формулы Дрифт Александром Смоляром отправился в Японию для перенятия опыта у D1GP. Там же они попадают на международный саммит по дрифту. Итогом поездки становятся скорректированные правила и регламент из японской серии, используемые в сезоне РДС 2010 года.</string>
    <string name="takayama_text">"""
    TAKAYAMA FORWARD AUTO
    Год основания - 2016
    Город - Красноярск
    Основатель - Георгий Чивчян"""
</string>

    <string name="citata_text_1">Цитата и пилоты команды</string>
    <string name="takayama_text_2">Абсолютно все члены нашей команды преследуют общую цель побеждать. И все действия каждого участника нашего коллектива направлены на решение задач самого разного уровня. Автомобили команды максимально унифицированы как по платформе, так и по оснащению.</string>
    <string name="takayama_text_3">Для нашей команды единственным приемлемым результатом является первое место по итогам всего чемпионата. У нас есть все необходимое для осуществления этой цели. Мы готовы решать любые задачи и добиваться самых высоких позиций. </string>
    <string name="fresh_text">"""
    SINTEC • FRESH МАРКЕТПЛЕЙС
    Год основания - 2017
    Город - Москва
    Основатель - Денис Мигаль</string>
    <string name="fresh_text2">Наша сила в нас самих и в тех, кто в нас верит! Мы обновились и реорганизовались к RDS GP 2023. Цель у нас одна, и она неизменная – чемпионский титул. В новом сезоне, проделав работу над ошибками, планируем снова его завоевать. Не видим смысла выезжать на трассу без нацеленности на высшие ступени пьедестала.</string>
    <string name="star_per_star_text2">"""
    STAR PЁR STARS AIMOL
    Год основания - 2018
    Город - Москва
    Основатель - Дмитрий Добровольский, Сергей Кабаргин</string>
    <string name="star_per_star_text3">Наша сила в уникальном сочетании качеств. С одной стороны, мудрость и опыт, с другой – удовольствие от жизни и позитивный настрой. У нас прекрасные машины и отличные пилоты, готовые заезжать на этих автомобилях на пьедестал. </string>
    <string name="carville_racing_text2">"""
    CARVILLE RACING
    Год основания - 2014
    Город - Санкт-Петербург
    Основатель - 2014</string>
    <string name="carville_racing_text3">За нашими плечами большой опыт гонок в кольце и в дрифте. Мы всегда прикладывали и будем прикладывать все свои усилия, чтобы навязывать борьбу в каждой стадии и заканчивать соревнования с призовыми трофеями. А еще мы самая красивая команда в RDS GP 2023! </string>
    <string name="lucoil_text2">"""
    LUKOIL RACING DRIFT TEAM
    Год основания - 1997
    Город - Москва
    Основатель - Евгений Малиновский, ПАО "Лукойл"""
    </string>
    <string name="lukoil_text3">Мы расшифровываем слово Team (команда), как Together Everyone Achieves More – «Вместе каждый добивается большего». Это наша сила. Мы учимся у тех, кто знает больше. У нас 88 выигранных чемпионатов в России, 9 международных, включая чемпионат мира, и более 700 побед в гонках. Мы активно передаем в дрифт накопленный в кольцевых гонках опыт и уже завоевали 22 подиума в личном и командном зачетах. </string>
    <string name="fail_crew_text2">"""
    FAILCREW X ДАРКСАЙД
    Год основания - 2013
    Город - Санкт-Петербург
    Основатель - Сергей Белокур"""</string>
    <string name="fail_crew_text3">Мы – лучшая команда. У нас потрясающие дрифтовые платформы, лучшие в мире и невероятно качественно построенные. У нас самый мощный по совокупности лошадиных сил состав в RDS GP 2023. А еще правильная идеология и очень гоночный настрой!</string>
    <string name="time_up_text2">"""
    TIMEUP
    Год основания - 2021
    Город - Красноярск
    Основатель - Леонид Шнайдер</string>
    <string name="time_up_text3">Мы из Сибири. Мы выросли на Красном кольце. А сибирская школа дрифта – бесспорно, одна из сильнейших в мире. Наши пилоты имеют опыт участия в RDS GP. Мы одна семья. Семья, которая живет дрифтом. И у нашей семьи есть девиз: «Время новых!». Мы – время новых людей, новых идей, новых свершений!
    </string>
    <string name="autoprofi_text2">"""
    AUTOPROFI TEAM
    Год основания - 2014
    Город - Москва
    Основатель - Степан Азаров</string>
    <string name="autoprofi_text3">Без всяких сомнений, основным нашим преимуществом является огромный опыт в дрифте, что подтверждают десятки трофеев на полках команды AUTOPROFI. Что касается сильных сторон нашего коллектива, тут первенство над всеми положительными качествами берёт совокупность этих качеств! Командная синергия – такая суперсила из умения взаимодействовать!</string>
    <string name="vs_text2">"""
    VSTEAM
    Год основания - 2023
    Город - Кузбасс
    Основатель - Алексей Вахтин</string>
    <string name="vs_text3">Наша сильная сторона в отношениях внутри команды. Они построены на доверии и уважении друг к другу. Вся команда работает слаженно, стремится к победам, готова расти и развиваться. Наш девиз – ехать в кайф! Так и будем делать!</string>
    <string name="car_1">"""NISSAN SILVIA S15\nTAKAYAMA"""</string>
    <string name="car_1_t">"""
    Двигатель - 2JZ GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 900</string>
    <string name="car_2">"""TOYOTA SUPRA A80 SAMURAI/BERKUT\nFRESH"""</string>
    <string name="car_2_t">"""
    Двигатель - 2JZ GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 870

    Двигатель - 2JZ GTE
    Рабочий объём (л) - 3,7
    Мощность (л. с.) - 930"""
    </string>
    <string name="car_3">"""LEXUS IS760 RHINO\nFRESH"""</string>
    <string name="car_3_t">"""
    Двигатель - GM LS7
    Рабочий объём (л) - 7,6
    Мощность (л. с.) - 755
    </string>
    <string name="car_4">"""NISSAN SILVIA S15\nSTAR PЁR STARS AIMOL"""</string>
    <string name="car_4_t">"""
    Двигатель - 1,5JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 800"""
    </string>
    <string name="car_5">"""BMW E92 EUROFIGHTER\nSTAR PЁR STARS AIMOL"""</string>
    <string name="car_5_t">"""
    Двигатель - LS-based V8 Supercharged
    Рабочий объём (л) - 7.0
    Мощность (л. с.) - 1050"""
    </string>
    <string name="car_6">"""BMW E30\nSCARVILLE RACING"""</string>
    <string name="car_6_t">"""
    Двигатель - 1,5JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 800"""
    </string>
    <string name="car_7">"""TOYOTA GR SUPRA "GROZA"\nSCARVILLE RACING"""</string>
    <string name="car_7_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,4
    Мощность (л. с.) - 1013"""
    </string>
    <string name="car_8">"""BMW F22"\nSCARVILLE RACING"""</string>
    <string name="car_8_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 700
    </string>
    <string name="car_9">"""LEXUS IS200"\nLUKOIL RACING DRIFT TEAM"""</string>
    <string name="car_9_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 900
    </string>
    <string name="car_10">"""BMW E92"\nLUKOIL RACING DRIFT TEAM"""</string>
    <string name="car_10_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 850
    </string>
    <string name="car_11">"""TOYOTA CHASER 100\nLUKOIL RACING DRIFT TEAM"""</string>
    <string name="car_11_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 888
    </string>
    <string name="car_12">"""NISSAN 370Z\nFAILCREW X ДАРКСАЙД"""</string>
    <string name="car_12_t">"""
    Двигатель - 2JZ - GTE
    Рабочий объём (л) - 3,0
    Мощность (л. с.) - 1079
    </string>


</resources>