<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KomandsFragment"
    android:background="@drawable/fon_3">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_takayama" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/takayama_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/takayama_text_2"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/takayama_text_3"
                    android:gravity="center"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/pilots_takayami"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_takayami" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_fresh" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/fresh_text"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fresh_text2"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_fresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_fresh" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_star_per_star" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/star_per_star_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/star_per_star_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/per_star_fresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilos_star_per" />
                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_cr" />
                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/carville_racing_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/carville_racing_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_carville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_cr" />
                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_lucoil" />
                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/lucoil_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/lukoil_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_lukoil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_lukoil" />
                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_feil_crew" />
                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/fail_crew_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fail_crew_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_fail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_fail" />
                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_time_up" />
                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/time_up_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_up_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_time_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_time_up" />
                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_autoprofi" />
                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/autoprofi_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/autoprofi_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_autoprofi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_autoprofi" />
                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    android:src="@drawable/btn_vs_team" />
                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:text="@string/vs_text2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/citata_text_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/vs_text3"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <ImageView
                    android:id="@+id/pilots_vs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pilots_vs" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>